@@ -681,7 +681,7 @@ class PANConf
         if( $printMessage )
             PH::print_stdout( "Now saving PANConf to file '$fileName'...");
 
-        $xml = &DH::dom_to_xml($this->xmlroot, $indentingXml, $lineReturn, -1, $indentingXmlIncreament + 1);
+        $xml = &DH::dom_to_xml($this->xmlroot, $indentingXml, $lineReturn, -1, $indentingXmlIncreament);
 
         $path_parts = pathinfo($fileName);
         if (!is_dir($path_parts['dirname']))
