@@ -1376,7 +1376,7 @@ class PanoramaConf
 
         //Todo: swaschkut check
         //$indentingXmlIncreament was 2 per default for Panroama
-        $xml = &DH::dom_to_xml($this->xmlroot, $indentingXml, $lineReturn, -1, $indentingXmlIncreament + 1);
+        $xml = &DH::dom_to_xml($this->xmlroot, $indentingXml, $lineReturn, -1, $indentingXmlIncreament);
 
         $path_parts = pathinfo($fileName);
         if (!is_dir($path_parts['dirname']))
